overflow-x fix

--- a/portfolio/src/assets/styles/theme1.css
+++ b/portfolio/src/assets/styles/theme1.css
@@ -6,6 +6,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .logo {
@@ -152,7 +153,7 @@ nav a:hover {
 
 .colors > div {
     display: flex;
-    filter: blur(12vw);
+    filter: blur(100px);
     transform-origin: top;
 }
 .colors > .bottom {
@@ -165,7 +166,7 @@ nav a:hover {
 
 .colors > div > div {
     flex-grow: 1;
-    filter: blur(12vw);
+    filter: blur(100px);
 }
 
 /* header */
